# pysqa

./: .coveragerc  .coveralls.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.ci_support/: check.py  environment-docs.yml  environment-mini.yml  environment-notebooks.yml  environment-old.yml  environment.yml  release.py
.github/: FUNDING.yml
.github/variables/: cache_number.env
.github/workflows/: UpdateDependabotPR.yml  automerge.yml  black.yml  coverage.yml  dependabot.yml  deploy.yml  format_black.yml  joss.yml  main.yml  mini.yml  notebooks.yml  pipeline.yml  pypicheck.yml  unittest.yml  unittests_old.yml
binder/: environment.yml  kernel.json  postBuild
diff_hpc_templates/: australia_nci_gadi_gpu.sh  australia_pawsey_setonix.sh
docs/: _config.yml  _toc.yml  advanced.md  api.rst  command.md  conf.py  debug.md  index.rst  installation.md  queue.md
docs/paper/: codemeta.json  paper.bib  paper.md
docs/source/: advanced.md  command.md  conf.py  debug.md  index.rst  installation.md  python.md  queue.md
example_hpc_submission_scripts/: australia_nci_gadi.sh  australia_nci_gadi_gpu.sh  australia_pawsey_setonix.sh
notebooks/: example.ipynb  example_config.ipynb  example_queue_type.ipynb
pysqa/: __init__.py  __main__.py  _version.py  basic.py  cmd.py  interface.py  modular.py  queueadapter.py  queues.py  remote.py  shared.py
pysqa/base/: abstract.py  cmd.py  config.py  core.py  modular.py  remote.py  validate.py
pysqa/executor/: __init__.py  __main__.py  backend.py  executor.py  helper.py
pysqa/ext/: modular.py  remote.py
pysqa/utils/: basic.py  config.py  core.py  execute.py  functs.py  modular.py  queues.py  remote.py  validate.py
pysqa/wrapper/: abstract.py  flux.py  generic.py  gent.py  lsf.py  moab.py  sge.py  slurm.py  torque.py
src/pysqa/: __init__.py  __main__.py  _version.py  queueadapter.py
src/pysqa/base/: abstract.py  cmd.py  config.py  core.py  models.py  modular.py  remote.py  validate.py
src/pysqa/wrapper/: abstract.py  flux.py  gent.py  lsf.py  slurm.py  torque.py
tests/: test_basic.py  test_cmd.py  test_execute_command.py  test_executor.py  test_flux.py  test_flux_integration.py  test_gent.py  test_lsf.py  test_moab.py  test_multi.py  test_queueadapter.py  test_remote.py  test_remote_auth.py  test_scheduler_commands.py  test_sge.py  test_slurm.py  test_slurm_integration.py  test_torque.py
tests/config/error/: queue.yaml
tests/config/flux/: flux.sh  flux_jobs
tests/config/gent/: gent_output  queue.yaml
tests/config/lsf/: bjobs_output
tests/config/multicluster/: local_slurm_queues.yaml
tests/config/remote/: queue.yaml
tests/config/remote_alternative/: queue.yaml
tests/config/remote_rebex/: queue.yaml
tests/config/slurm/: queue.yaml  slurm.sh  slurm_extra.sh  squeue_output
tests/config/torque/: PBSPro_qsub_output  torque.sh
tests/integration/: test_flux_integration.py  test_slurm_integration.py
tests/static/bad_template/: bad.sh  queue.yaml
tests/static/flux/: flux.sh  queue.yaml
tests/static/gent/: slurm.sh
tests/static/multicluster/: clusters.yaml
tests/static/remote_alternative/: queue.yaml
tests/static/remote_rebex_hosts/: queue.yaml
tests/static/slurm/: slurm.sh  slurm_extra.sh
tests/static/torque/: PBSPro_qsub_output
tests/unit/: test_queueadapter.py
tests/unit/base/: test_abstract.py  test_cmd.py  test_config.py  test_core.py  test_models.py  test_modular.py  test_pydantic_missing.py  test_remote.py  test_remote_auth.py  test_remote_ssh_connection.py  test_validate.py
tests/unit/wrapper/: test_abstract.py  test_flux.py  test_gent.py  test_lsf.py  test_moab.py  test_sge.py  test_slurm.py  test_torque.py
