[build-system]
requires = [
    "jinja2==3.1.6", 
    "pandas==2.2.3", 
    "pyyaml==6.0.2", 
    "setuptools==80.7.1",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "pysqa"
description = "Simple HPC queuing system adapter for Python on based jinja templates to automate the submission script creation."
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2==3.1.6",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pysqa"
Documentation = "https://pysqa.readthedocs.io"
Repository = "https://github.com/pyiron/pysqa"

[project.optional-dependencies]
sge = ["defusedxml==0.7.1"]
remote = [
    "paramiko==3.5.1",
    "tqdm==4.67.1",
]
twofactor = ["pyauthenticator==0.2.0"]

[project.scripts]
pysqa = "pysqa.cmd:command_line"

[tool.setuptools.packages.find]
include = ["pysqa*"]

[tool.setuptools.dynamic]
version = {attr = "pysqa.__version__"}

[tool.ruff]
exclude = [".ci_support", "docs", "notebooks", "tests", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore exception naming
    "B904",
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pysqa/_version.py"
parentdir_prefix = "pysqa"
tag_prefix = "pysqa-"
