[build-system]
requires = [
    "jinja2==3.1.6", 
    "pandas==2.3.3", 
    "pyyaml==6.0.3", 
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "pysqa"
description = "Simple HPC queuing system adapter for Python on based jinja templates to automate the submission script creation."
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jinja2==3.1.6",
    "pandas==2.3.3",
    "pyyaml==6.0.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pysqa"
Documentation = "https://pysqa.readthedocs.io"
Repository = "https://github.com/pyiron/pysqa"

[project.optional-dependencies]
sge = ["defusedxml==0.7.1"]
remote = [
    "paramiko==4.0.0",
    "tqdm==4.67.1",
]
twofactor = ["pyauthenticator==0.3.0"]

[project.scripts]
pysqa = "pysqa.cmd:command_line"

[tool.ruff]
exclude = [".ci_support", "docs", "notebooks", "tests", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore exception naming
    "B904",
    # ignore line-length violations
    "E501",
    # ignore imports which are not at the top of a module
    "PLC0415",
    # Too many arguments in function definition
    "PLR0913",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
]

[tool.hatch.build]
include = [
    "src/pysqa"
]

[tool.hatch.build.hooks.vcs]
version-file = "src/pysqa/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/pysqa"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pysqa"
]

[tool.hatch.version]
source = "vcs"
path = "src/pysqa/_version.py"

[tool.coverage.run]
source = ["pysqa"]
command_line = "-m unittest discover tests"
